--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "vue": "^3.4.37",
-    "vue3-chessboard": "^1.3.3"
+    "dotenv": "16.4.5",
+    "vue": "3.4.37",
+    "vue3-chessboard": "1.3.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1"
+    "@vitejs/plugin-vue": "5.1.2",
+    "vite": "5.4.1"
   }
 }
